Added memcached and delete api